--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.0",
     "mysql2": "^3.10.3",
+    "node-cron": "^3.0.3",
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
